--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
+        <link rel="manifest" href="./public/manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>Mujeeb Khan</title>
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load',  () => {
+                    navigator.serviceWorker.register("./sw.js").then(
+                        function (registration) {
+                            // Registration was successful
+                            console.log(
+                                'ServiceWorker registration successful with scope: ',
+                                registration.scope
+                            )
+                        },
+                        function (err) {
+                            // registration failed :(
+                            console.log(
+                                'ServiceWorker registration failed: ',
+                                err
+                            )
+                        }
+                    )
+                })
+            }
+        </script>
     </body>
 </html>
