--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
-        <link rel="manifest" href="./public/manifest.json">
+        <link rel="manifest" href="./public/manifest.json" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+            name="description"
+            content="Mujeeb Khan Personal Portfolio WebSite"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>Mujeeb Khan</title>
@@ -12,25 +17,25 @@
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
         <script>
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load',  () => {
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", () => {
                     navigator.serviceWorker.register("./sw.js").then(
                         function (registration) {
                             // Registration was successful
                             console.log(
-                                'ServiceWorker registration successful with scope: ',
+                                "ServiceWorker registration successful with scope: ",
                                 registration.scope
-                            )
+                            );
                         },
                         function (err) {
                             // registration failed :(
                             console.log(
-                                'ServiceWorker registration failed: ',
+                                "ServiceWorker registration failed: ",
                                 err
-                            )
+                            );
                         }
-                    )
-                })
+                    );
+                });
             }
         </script>
     </body>
