--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
-        <script>
+        <!-- <script>
             if ("serviceWorker" in navigator) {
                 window.addEventListener("load", () => {
                     navigator.serviceWorker.register("./sw.js").then(
@@ -37,6 +37,6 @@
                     );
                 });
             }
-        </script>
+        </script> -->
     </body>
 </html>
